--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -39,6 +39,11 @@ jobs:
     name: Analyze package cvoerage with coverall
     runs-on: ubuntu-latest
     steps:
+      - name: Install Go
+        if: success()
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.15.x
       - name: Checkout the code
         uses: actions/checkout@v2
       - name: Calc coverage
